[package]
name = "ntru"
version = "0.4.2-rc5"
license = "GPL-3.0+/BSD-3-Clause"
build = "build.rs"
links = "ntru"
readme = "README.md"
repository = "https://github.com/FractalGlobal/ntru-rs"
documentation = "http://fractal.global/ntru-rs"
authors = ["Razican <iban@fractal.global>"]
description = """
Implementation of the NTRUEncrypt algorithm. Interface to libntru.
"""
keywords = ["libntru", "NTRU", "NTRUEncrypt"]

[features]
default = []
no-sse = []
sse = []

[dependencies]
libc = "^0.2"

[build-dependencies]
gcc = "^0.3"

[dev-dependencies]
rust-crypto = "^0.2"
rand = "^0.3"
