[package]
name = "ntru"
version = "0.5.6"
license = "GPL-3.0+/BSD-3-Clause"
build = "build.rs"
links = "ntru"
readme = "README.md"
repository = "https://github.com/FractalGlobal/ntru-rs"
documentation = "https://docs.rs/ntru/"
authors = ["Razican <iban@fractal.global>"]
description = """
Implementation of the NTRUEncrypt algorithm. Interface to libntru.
"""
keywords = ["libntru", "NTRU", "NTRUEncrypt"]

[features]
default = []
no-sse = []
sse = []
no-avx2 = []
avx2 = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
sha1 = "0.2"
rand = "0.3"
